@@ -565,11 +565,16 @@ void emul_machine_setup(struct machine *m, int n_load, char **load_names,
 			break;
 
 		case ARCH_ARM:
-			if (cpu->pc & 3) {
-				fatal("ARM: lowest bits of pc set: TODO\n");
+			if (cpu->pc & 2) {
+				fatal("ARM: misaligned pc: TODO\n");
 				exit(1);
 			}
-			cpu->pc &= 0xfffffffc;
+
+			cpu->pc = (uint32_t)cpu->pc;
+
+			// Lowest bit of PC indicates THUMB mode.
+			if (cpu->pc & 1)
+				cpu->cd.arm.cpsr |= ARM_FLAG_T;
 			break;
 
 		case ARCH_M88K:
