@@ -4724,3 +4724,7 @@ Changelog for GXemul:
 20180920	Making ARM disassembly show THUMB instructions, if the lowest
 		bit of the address is 1. (They can not be executed yet though.)
 		Fixing broken "print" command. Oops.
+		Implement some more THUMB disassembly.
+		Fail rather than silently treating ARM instructions beginning
+		with 0xf as nops.
+		Allow the emulator to start in THUMB mode (lowest pc bit set).
